--- a/include/css/styles.css
+++ b/include/css/styles.css
@@ -57,3 +57,8 @@ input[type="text"] {padding: 4px 7px;}
 
 .page .page {margin-left: 1em;}
 
+.new-version {
+	color: #3333cc; 
+	font-size: 20px;
+	margin-bottom: 15px;
+}
