--- a/include/css/styles.css
+++ b/include/css/styles.css
@@ -62,3 +62,8 @@ input[type="text"] {padding: 4px 7px;}
 	font-size: 20px;
 	margin-bottom: 15px;
 }
+.settings-error {
+	color:red; 
+	font-size: 22px;
+	margin-bottom: 15px;
+}
