--- a/include/css/styles.css
+++ b/include/css/styles.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -23,7 +23,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -155,6 +155,19 @@ button:hover {opacity: 0.85;}
 	opacity: 0;
 	transition: ease 0.2s;
 }
+.clone-elements .field-holder .add-acf-group + .error {
+	color: #f00;
+	border: 1px solid #f00;
+	border-radius: 50%;
+	width: 17px;
+	height: 17px;
+	display: inline-block;
+	text-align: center;
+	cursor: pointer;
+	position: absolute;
+	right: -90%;
+	top: 3px;
+}
 .clone-elements .field-holder .add-acf-group:focus {outline: none;}
 .clone-elements .field-holder:hover .add-acf-group {opacity: 1;}
 .clone-elements .field-holder:hover .add-acf-group:hover {opacity: 0.85;}
@@ -235,12 +248,12 @@ strong.title {
 }
 
 .new-version {
-	color: #3333cc; 
+	color: #3333cc;
 	font-size: 20px;
 	margin-bottom: 15px;
 }
 .settings-error {
-	color:red; 
+	color:red;
 	font-size: 22px;
 	margin-bottom: 15px;
 }
@@ -341,6 +354,15 @@ input.error {
 	float: right;
 }
 .ajax-success .loader {display: none !important;}
+
+.connected h3:after {
+	content: ' \2714';
+	color: green;
+}
+.error h3:after {
+	content: ' \2718';
+	color: red;
+}
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
